2.1/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: writer-reader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: writer-reader
  template:
    metadata:
      labels:
        app: writer-reader
    spec:
      containers:
        - name: writer
          image: lloydrivers052/part2.1-ping-pong:latest
          ports:
            - containerPort: 3001
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
        - name: reader
          image: lloydrivers052/part2.1-log-output:latest
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
